--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,7 +24,7 @@
 			  </div>
 			</div>
 			<footer class="footer">
-				<div class="container">
+				<div class="container" style="text-align: center;">
 					author: <a href="https://github.com/aa-ahmed-aa/">aa-ahmed-aa</a>
 				</div>
 			</footer>
