--- a/docs/_includes/what_is_it.html
+++ b/docs/_includes/what_is_it.html
@@ -1,3 +1,3 @@
-<p>
+<p style="padding-left: 50px;">
 This is a package for running and compiling your c and c++ files add the compiler to the configurations file and you are ready to go 💥 .
 </p>
