--- a/docs/_includes/install.html
+++ b/docs/_includes/install.html
@@ -1,3 +1,16 @@
 <p style="padding-left: 50px;">
-	Install
+	You can install the package using <p style="background-color: #F6F8FA">composer require aa-ahmed-aa/dorm</p> <br>
+	<br>
+	OR<br>
+	to your composer.json file add this to your require list<br>
+	<br>
+	<p style="background-color: #F6F8FA">
+		{
+		    "require": {
+		        "aa-ahmed-aa/dorm": "~1.1"
+		    }
+		}
+	</p>
+	<br>
+	then run composer update<br>
 </p>
