--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,8 +15,8 @@
 		<body>
 			<div class="container main-container">
 			  <div class="row">
-			<div class="col-sm-8">
-			<h1 class="brand-name"><a href="/">Dorm</a></h1>
+			<div class="col-sm-8" >
+				<h1 class="brand-name" style="font-size: 170px;text-decoration: underline;">Dorm</h1>
 			</div>
 			<div class="col-sm-8 content-page">
 				{{ content }}
