--- a/docs/_includes/licence.html
+++ b/docs/_includes/licence.html
@@ -1,3 +1,3 @@
-<p style="padding-left: 50px;">
+<p style="padding-left: 50px;font-weight:bold;">
 	The MIT License (MIT). Please see License File for more information.
 </p>
