--- a/docs/_includes/install.html
+++ b/docs/_includes/install.html
@@ -1,7 +1,7 @@
-<p style="padding-left: 50px;">
+<div style="padding-left: 50px;">
 	You can install the package using <p style="background-color: #F6F8FA">composer require aa-ahmed-aa/dorm</p> <br>
-	<br>
-	OR<br>
+
+	<h3>OR</h3><br>
 	to your composer.json file add this to your require list<br>
 	<br>
 	<p style="background-color: #F6F8FA">
@@ -13,4 +13,4 @@
 	</p>
 	<br>
 	then run composer update<br>
-</p>
+</div>
