--- a/docs/_includes/install.html
+++ b/docs/_includes/install.html
@@ -1,15 +1,15 @@
 <div style="padding-left: 50px;">
-	You can install the package using <p style="background-color: #F6F8FA">composer require aa-ahmed-aa/dorm</p> <br>
+	You can install the package using <p style="background-color: #F6F8FA;border-radius: 7px;">composer require aa-ahmed-aa/dorm</p> <br>
 
 	<h3>OR</h3><br>
 	to your composer.json file add this to your require list<br>
 	<br>
-	<p style="background-color: #F6F8FA">
-		{
-		    "require": {
-		        "aa-ahmed-aa/dorm": "~1.1"
-		    }
-		}
+	<p style="background-color: #F6F8FA;border-radius: 7px;">
+		{<br>
+		    "require": {<br>
+		        "aa-ahmed-aa/dorm": "~1.1"<br>
+		    }<br>
+		}<br>
 	</p>
 	<br>
 	then run composer update<br>
