--- a/docs/_includes/install.html
+++ b/docs/_includes/install.html
@@ -6,9 +6,9 @@
 	<br>
 	<p style="background-color: #F6F8FA;border-radius: 7px;">
 		{<br>
-		    "require": {<br>
-		        "aa-ahmed-aa/dorm": "~1.1"<br>
-		    }<br>
+		    &nbsp;&nbsp;&nbsp;&nbsp; "require": {<br>
+		    &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;     "aa-ahmed-aa/dorm": "~1.1"<br>
+		    &nbsp;&nbsp;&nbsp;&nbsp; }<br>
 		}<br>
 	</p>
 	<br>
