--- a/docs/_includes/configure.html
+++ b/docs/_includes/configure.html
@@ -1,3 +1,25 @@
-<p style="padding-left: 50px;">
-	Configure
-</p>
+<div style="padding-left: 50px;">
+	First you need to install compilers and configure their paths in <p style="background-color: #F6F8FA;border-radius: 7px;">src/Config.php</p>
+	<br>
+	<h4>C++</h4><br>
+		<ul>
+			<li>
+				you can find the MinGW compiler <a href="https://nuwen.net/mingw.html">Here</a>
+			</li><br>
+			<li>
+				after you download the compiler files copy the MinGW folder to your <p style="background-color: #F6F8FA;border-radius: 7px;">C:// drive</p>
+			</li><br>
+		</ul>
+	<h4>Java</h4><br>
+		<ul>
+			<li>
+				install jdk and configure the path in your environment variables you can find the judk <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Here</a>	
+			</li><br>
+		</ul>
+	<h4>Python</h4><br>
+	<ul>
+		<li>install python from <a href="https://www.python.org/downloads/">Here</a></li><br>
+		<li>if you want this package to handle both versions of <p style="background-color: #F6F8FA;border-radius: 7px;">python2.x</p> and <p style="background-color: #F6F8FA;border-radius: 7px;">python3.x</p> the package already do this and you can look at <a href="https://stackoverflow.com/questions/4621255/how-do-i-run-a-python-program-in-the-command-prompt-in-windows-7/4621277#4621277">This Question</a> to cnfigure both of them on the command line</li><br>
+	</ul>
+
+</div>
