--- a/docs/_includes/configure.html
+++ b/docs/_includes/configure.html
@@ -1,5 +1,5 @@
 <div style="padding-left: 50px;">
-	First you need to install compilers and configure their paths in <p style="background-color: #F6F8FA;border-radius: 7px;">src/Config.php</p>
+	First you need to install compilers and configure their paths in <code>src/Config.php</code>
 	<br>
 	<h4>C++</h4><br>
 		<ul>
