--- a/docs/_includes/configure.html
+++ b/docs/_includes/configure.html
@@ -7,7 +7,7 @@
 				you can find the MinGW compiler <a href="https://nuwen.net/mingw.html">Here</a>
 			</li><br>
 			<li>
-				after you download the compiler files copy the MinGW folder to your <p style="background-color: #F6F8FA;border-radius: 7px;">C:// drive</p>
+				after you download the compiler files copy the MinGW folder to your <code>C:// drive</code>
 			</li><br>
 		</ul>
 	<h4>Java</h4><br>
@@ -19,7 +19,7 @@
 	<h4>Python</h4><br>
 	<ul>
 		<li>install python from <a href="https://www.python.org/downloads/">Here</a></li><br>
-		<li>if you want this package to handle both versions of <p style="background-color: #F6F8FA;border-radius: 7px;">python2.x</p> and <p style="background-color: #F6F8FA;border-radius: 7px;">python3.x</p> the package already do this and you can look at <a href="https://stackoverflow.com/questions/4621255/how-do-i-run-a-python-program-in-the-command-prompt-in-windows-7/4621277#4621277">This Question</a> to cnfigure both of them on the command line</li><br>
+		<li>if you want this package to handle both versions of <code>python2.x</code> and <code>python3.x</code> the package already do this and you can look at <a href="https://stackoverflow.com/questions/4621255/how-do-i-run-a-python-program-in-the-command-prompt-in-windows-7/4621277#4621277">This Question</a> to cnfigure both of them on the command line</li><br>
 	</ul>
 
 </div>
