--- a/docs/_includes/install.html
+++ b/docs/_includes/install.html
@@ -1,8 +1,8 @@
 <div style="padding-left: 50px;">
-	You can install the package using <p style="background-color: #F6F8FA;border-radius: 7px;">composer require aa-ahmed-aa/dorm</p> <br>
+	You can install the package using <code>composer require aa-ahmed-aa/dorm</code> <br>
 
 	<h3>OR</h3><br>
-	to your composer.json file add this to your require list<br>
+	to your <code>composer.json</code> file add this to your require list<br>
 	<br>
 	<p style="background-color: #F6F8FA;border-radius: 7px;">
 		{<br>
@@ -12,5 +12,5 @@
 		}<br>
 	</p>
 	<br>
-	then run composer update<br>
+	then run <code>composer update</code><br>
 </div>
