--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,10 +15,10 @@
 		<body>
 			<div class="container main-container">
 			  <div class="row">
-			<div class="col-sm-8" >
+			<div class="col-md-12" >
 				<h1 class="brand-name" style="font-size: 170px;text-decoration: underline;">Dorm</h1>
 			</div>
-			<div class="col-sm-8 content-page">
+			<div class="col-md-12 content-page">
 				{{ content }}
 			</div>
 			  </div>
