--- a/docs/_includes/configure.html
+++ b/docs/_includes/configure.html
@@ -1,7 +1,7 @@
 <div style="padding-left: 50px;">
 	First you need to install compilers and configure their paths in <code>src/Config.php</code>
 	<br>
-	<h4>C++</h4><br>
+	<h4>C++</h4>
 		<ul>
 			<li>
 				you can find the MinGW compiler <a href="https://nuwen.net/mingw.html">Here</a>
@@ -10,13 +10,13 @@
 				after you download the compiler files copy the MinGW folder to your <code>C:// drive</code>
 			</li>
 		</ul>
-	<h4>Java</h4><br>
+	<h4>Java</h4>
 		<ul>
 			<li>
 				install jdk and configure the path in your environment variables you can find the judk <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Here</a>	
 			</li>
 		</ul>
-	<h4>Python</h4><br>
+	<h4>Python</h4>
 	<ul>
 		<li>install python from <a href="https://www.python.org/downloads/">Here</a></li>
 		<li>if you want this package to handle both versions of <code>python2.x</code> and <code>python3.x</code> the package already do this and you can look at <a href="https://stackoverflow.com/questions/4621255/how-do-i-run-a-python-program-in-the-command-prompt-in-windows-7/4621277#4621277">This Question</a> to cnfigure both of them on the command line</li>
