--- a/docs/_includes/licence.html
+++ b/docs/_includes/licence.html
@@ -1,3 +1,3 @@
-<p style="padding-left: 50px;font-weight:bold;">
+<div style="padding-left: 50px;">
 	The MIT License (MIT). Please see License File for more information.
-</p>
+</div>
