website done hola

--- a/docs/_includes/add_your_compiler.html
+++ b/docs/_includes/add_your_compiler.html
@@ -6,7 +6,7 @@
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"path" => "__COMPILER_PATH__",<br>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"file_extension" =>'__CODE_FILE_EXTENSION_',<br>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"compile_func" => __NAME_FOR_YOUR_COMPILER_FUNCTION__,<br>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"run_func" => __NAME_FOR_YOUR_RUN_FUNCTION__br	
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"run_func" => __NAME_FOR_YOUR_RUN_FUNCTION__ <br>	
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;]<br>
 	&nbsp;&nbsp;&nbsp;&nbsp;];
 	</p>
