--- a/docs/_includes/add_your_compiler.html
+++ b/docs/_includes/add_your_compiler.html
@@ -1,4 +1,4 @@
-<p style="padding-left: 50px;">
+<div style="padding-left: 50px;">
 	This package is designed to handle compile/run of any other compilers in your project 
 	<p style="background-color: #F6F8FA;border-radius: 7px;">
 	&nbsp;&nbsp;&nbsp;&nbsp;$compilers = [<br>
@@ -10,17 +10,17 @@
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;]<br>
 	&nbsp;&nbsp;&nbsp;&nbsp;];
 	</p>
-<h4>Steps</h4>
-<ul>
-	<ol>
-		-Add your customized key for your configuration to use it later in your compile and run function see src/Config.php.
-	</ol>
-	<ol>
-		-Add run and compile functions for your compiler as you named in the configuration array.
-	</ol>
-	<ol>
-		-Test and Bom your compiler is there.
-	</ol>
-</ul>
+	<h4>Steps</h4>
+	<ul>
+		<ol>
+			-Add your customized key for your configuration to use it later in your compile and run function see src/Config.php.
+		</ol>
+		<ol>
+			-Add run and compile functions for your compiler as you named in the configuration array.
+		</ol>
+		<ol>
+			-Test and Bom your compiler is there.
+		</ol>
+	</ul>
 
-</p>
+</div>
