refactor the Dorm() to Executor() 🌞🌞

--- a/docs/_includes/usage.html
+++ b/docs/_includes/usage.html
@@ -7,7 +7,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;require ('vendor/autoload.php');<br>
 		&nbsp;&nbsp;&nbsp;&nbsp;use Ahmedkhd\Dorm\Dorm;<br>
 <br>
-		&nbsp;&nbsp;&nbsp;&nbsp;$obj = new Dorm();<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;$obj = new Executor();<br>
 <br>
 		&nbsp;&nbsp;&nbsp;&nbsp;//set compilation path<br>
 		&nbsp;&nbsp;&nbsp;&nbsp;$obj->setCompilationPath( __DIR__ );<br>
